--- a/9_13.08/GsonAPI/app/build.gradle
+++ b/9_13.08/GsonAPI/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0-alpha1'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
